--- a/Jenkins/Base.lproj/Main.storyboard
+++ b/Jenkins/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vYO-Yx-1Ds">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V20-SS-LZy">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Jenkins" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,10 +19,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qkV-Wj-zJa">
                                 <rect key="frame" x="16" y="318" width="343" height="31"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="take me next"/>
                                 <connections>
-                                    <action selector="pushVC:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cYj-qR-Omo"/>
-                                    <action selector="pushVCButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bQm-eS-KYe"/>
+                                    <action selector="pushVC:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FBD-Qc-EGe"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -35,69 +34,56 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qkV-Wj-zJa" secondAttribute="trailing" constant="16" id="seA-ch-N1V"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Ohl-Ev-E2Z"/>
+                    <navigationItem key="navigationItem" title="Main" id="Ohl-Ev-E2Z"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="970.39999999999998" y="53.523238380809602"/>
+            <point key="canvasLocation" x="2848.8000000000002" y="53.523238380809602"/>
         </scene>
         <!--Home View Controller-->
-        <scene sceneID="0kx-kz-0vr">
+        <scene sceneID="WMS-j2-Zim">
             <objects>
-                <viewController storyboardIdentifier="HomeViewControllerSB" id="lhE-HM-aE2" customClass="HomeViewController" customModule="Jenkins" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3Ex-cg-KWp">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="en9-Ln-FPC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="HomeViewControllerSB" id="s90-xW-25W" customClass="HomeViewController" customModule="Jenkins" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="75N-OD-bEI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6qK-on-xwD">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="X48-mG-AhC">
-                                        <rect key="frame" x="0.0" y="44.5" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="X48-mG-AhC" id="8b4-TR-NCP">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HomeViewController" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r92-zu-dPH">
+                                <rect key="frame" x="54.5" y="315.5" width="266.5" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="dce-Ji-Iu8"/>
+                        <viewLayoutGuide key="safeArea" id="1KI-9A-TRJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6qK-on-xwD" firstAttribute="top" secondItem="dce-Ji-Iu8" secondAttribute="top" id="A2o-LY-y5c"/>
-                            <constraint firstItem="6qK-on-xwD" firstAttribute="leading" secondItem="dce-Ji-Iu8" secondAttribute="leading" id="cvj-vC-jQ9"/>
-                            <constraint firstItem="6qK-on-xwD" firstAttribute="trailing" secondItem="dce-Ji-Iu8" secondAttribute="trailing" id="hCo-TU-M7f"/>
-                            <constraint firstItem="6qK-on-xwD" firstAttribute="bottom" secondItem="dce-Ji-Iu8" secondAttribute="bottom" id="k4W-CR-FvP"/>
+                            <constraint firstItem="r92-zu-dPH" firstAttribute="centerY" secondItem="75N-OD-bEI" secondAttribute="centerY" id="Fmc-hR-YOh"/>
+                            <constraint firstItem="r92-zu-dPH" firstAttribute="centerX" secondItem="75N-OD-bEI" secondAttribute="centerX" id="dpp-OI-3JL"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="tableView" destination="6qK-on-xwD" id="JyP-rG-rWw"/>
-                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="GnT-H0-jvx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1916" y="53.523238380809602"/>
+            <point key="canvasLocation" x="3788" y="53.523238380809602"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="K5c-mX-hYh">
+        <scene sceneID="vFz-Qe-lrc">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vYO-Yx-1Ds" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="V20-SS-LZy" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VbU-Nh-fUX">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="v4m-Z0-kCk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="EJi-Cd-MBt"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="0xI-we-PSg"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="69g-Xl-cT9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xGW-lH-U0v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="31.199999999999999" y="53.523238380809602"/>
+            <point key="canvasLocation" x="1909.5999999999999" y="53.523238380809602"/>
         </scene>
     </scenes>
     <resources>
